@@ -1,29 +1,27 @@
 package com.abc.backend.CNPM.service;
 
 import com.abc.backend.CNPM.security.PhanQuyenSecurity;
-
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
-
 import lombok.RequiredArgsConstructor;
-
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 
 @Component
 @RequiredArgsConstructor
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
 
     private final PhanQuyenSecurity phanQuyenSecurity;
-    private final JwtAuthenticationFilter jwtAuthenticationFilter;
+
     @Override
     protected void doFilterInternal(
             HttpServletRequest request,
@@ -41,20 +39,19 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
         String token = authHeader.substring(7);
 
         if (phanQuyenSecurity.validateToken(token)) {
-
-            String email = phanQuyenSecurity.layEmail(token);
+            String email  = phanQuyenSecurity.layEmail(token);
+            String vaiTro = phanQuyenSecurity.layVaiTro(token);
 
             UsernamePasswordAuthenticationToken authToken =
                     new UsernamePasswordAuthenticationToken(
                             email,
                             null,
-                            Collections.emptyList()
+                            vaiTro != null
+                                ? List.of(new SimpleGrantedAuthority("ROLE_" + vaiTro))
+                                : List.of()
                     );
 
-            authToken.setDetails(
-                    new WebAuthenticationDetailsSource().buildDetails(request)
-            );
-
+            authToken.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
             SecurityContextHolder.getContext().setAuthentication(authToken);
         }
 
